# src/entities/Role.ts
@@ -1,0 +1,13 @@
+import { Column, Entity, PrimaryGeneratedColumn } from "typeorm";
+
+@Entity('roles')
+export class Role {
+    @PrimaryGeneratedColumn()
+    id: number;
+
+    @Column({ type: 'text' })
+    name: string;
+
+    @Column({ type: 'text' })
+    description: string;
+}
