# src/swagger.json
@@ -75,9 +75,12 @@
                             "examples": {
                                 "User": {
                                     "value": {
-                                        "name": "Médico 111",
-                                        "email": "medico111@hotmail.com",
-                                        "password": "1345"
+                                        "name": "Bruno Garcia",
+                                        "email": "BrunoGarcia@hotmail.com",
+                                        "password": "1345",
+                                        "role_id": [
+                                            1
+                                        ]
                                     }
                                 }
                             }
@@ -157,8 +160,8 @@
                             "examples": {
                                 "User": {
                                     "value": {
-                                        "name": "Médico 111",
-                                        "email": "medico111@hotmail.com",
+                                        "name": "Bruno Garcia",
+                                        "email": "BrunoGarcia@hotmail.com",
                                         "password": "1345"
                                     }
                                 }
@@ -221,28 +224,24 @@
                 }
             }
         },
-        "/LinkPagamento": {
+        "/role/": {
             "post": {
-                "summary": "Link de pagamento",
-                "description": "Link de pagamento",
+                "summary": "Cadastro de roles",
+                "description": "Cadastro de roles.",
                 "tags": [
-                    "Link de pagamento"
-                ],
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
+                    "Roles"
                 ],
                 "requestBody": {
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/LinkPagamento"
+                                "$ref": "#/components/schemas/Role"
                             },
                             "examples": {
-                                "LinkPagamento": {
+                                "Role": {
                                     "value": {
-                                        "planoEscolhido": 2
+                                        "name": "Admin",
+                                        "description": "Pode fazer tudo no sistema"
                                     }
                                 }
                             }
@@ -250,9 +249,38 @@
                     }
                 },
                 "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400": {
+                        "description": "Role já existe"
+                    },
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/Role"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "get": {
+                "summary": "Lista Roles",
+                "description": "Lista Roles",
+                "tags": [
+                    "Roles"
+                ],
+                "responses": {
                     "responses": {
                         "401": {
                             "description": "Unauthorized"
+                        },
+                        "400": {
+                            "description": "Sem Roles cadastradas."
                         },
                         "200": {
                             "description": "OK",
@@ -260,7 +288,7 @@
                                 "application/json": {
                                     "schema": {
                                         "type": "object",
-                                        "$ref": "#/components/schemas/LinkPagamento"
+                                        "$ref": "#/components/schemas/Role"
                                     }
                                 }
                             }
@@ -289,6 +317,23 @@
                     },
                     "telefone": {
                         "type": "string"
+                    },
+                    "roles": {
+                        "type:": "array"
+                    }
+                }
+            },
+            "Role": {
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "type": "number"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "description": {
+                        "type": "string"
                     }
                 }
             },
@@ -300,17 +345,6 @@
                     },
                     "password": {
                         "type": "string"
-                    }
-                }
-            },
-            "LinkPagamento": {
-                "type": "object",
-                "properties": {
-                    "code": {
-                        "type": "number"
-                    },
-                    "data": {
-                        "type": "object"
                     }
                 }
             }
